--- a/Desafios/desafio android d010/style.css
+++ b/Desafios/desafio android d010/style.css
@@ -76,6 +76,11 @@ nav > a{
     white-space: nowrap;
 }
 
+
+.faleconosco{
+    white-space: nowrap;
+}
+
 nav > a:hover{
     background-color: rgba(180, 226, 180, 0.185);
     padding: 10px;
