--- a/Desafios/desafio android d010/style.css
+++ b/Desafios/desafio android d010/style.css
@@ -72,7 +72,8 @@ nav > a{
     color: white;
     text-decoration: none;
     font-weight: bold;
-    margin: 0px 8px;  
+    margin: 0px 5px;  
+    font-size: 10px;
     white-space: nowrap;
 }
 
