--- a/Desafios/desafio android d010/style.css
+++ b/Desafios/desafio android d010/style.css
@@ -65,7 +65,7 @@ header > p{
 nav{
     margin: 0px 0px -10px -20px;
     padding: 0px;
-    box-shadow: opx 7px 7px rgba(0, 0, 0, 0.589);
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.589);
 }
 
 nav > a{
